[package]
name = "shortest_path"
version = "0.1.0"
authors = ["Simon Tharby <simon@liquidvoting.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "^0.3.1"
itertools = "^0.10.1"
rand = "0.8.4"
criterion = "0.3"

[[bench]]
name = "brute_matrix"
harness = false
